--- a/html/collection.html
+++ b/html/collection.html
@@ -1,31 +1,54 @@
-<p>This is a list of all the current collection implementations of the library. While the categorization is more deliberate in its context, the purpose of an implementation may differ from the categorization-context. For example, Hot Wheels, Gran Turismo, and Matchbox are all related to cars, with two being from the toy category and another in the games category. The purpose of all three however are primarily for access to car images. Matchbox mainly serves civilian cars, Hot Wheels serves fantasy cars, Gran Turismo serves realistic cars. It took 3 datasets to serve the most functional case of car references since commercial car data from multiple makes is anything but unified.</p>
+<p>This is a list of all the current dataset implementations of the library. </p>
+
+<table class="generaltable">
+        <tr>
+                <td class="tdl">Name</td>
+                <td class="tdr">Name of the institution or data source.</td>
+        </tr>
+        <tr>
+                <td class="tdl">Category</td>
+                <td class="tdr">A simple identifier for filtration of datasets.</td>
+        </tr>
+        <tr>
+                <td class="tdl">Purpose</td>
+                <td class="tdr">While the categorization is more deliberate in its context, the purpose of an implementation may be more specific. For example, Hot Wheels, Gran Turismo, and Matchbox are all related to cars, with two being from the toy category and another in the games category. The purpose of all three however are primarily for access to car images. Matchbox mainly serves civilian cars, Hot Wheels serves fantasy cars, and Gran Turismo serves realistic cars. It took 3 datasets to serve the most functional case of car references since commercial car data from multiple makes is anything but unified.</td>
+        </tr>
+        <tr>
+                <td class="tdl">Data Source</td>
+                <td class="tdr">Link to the data source and/or its API documentation.</td>
+        </tr>
+        <tr>
+                <td class="tdl">Schema/Data</td>
+                <td class="tdr">The mysql database structure of the dataset or example-data.</td>
+        </tr>
+</table>
 
 <table class="generaltable no-scale">
         <tr>
                 <th>Name</th>
-                <th>Purpose</th>
                 <th>Category</th>
+                <th>Purpose</th>
                 <th>Data Source</th>
                 <th>Schema/Data</th>
         </tr>
         <tr>
                 <td>Anilist</td>
-                <td>Summaries for historical as well as new anime and manga.</td>
                 <td>Media</td>
+                <td>Summaries for historical as well as new anime and manga.</td>
                 <td><a href="https://docs.anilist.co/" target="_blank">Link</a></td>
                 <td><a href="javascript:void(0)" class="schemalink" data="anilist">View</a></td>
         </tr>
         <tr>
                 <td>Art Institute of Chicago</td>
-                <td>Museum access.</td>
                 <td>Art</td>
+                <td>Museum access.</td>
                 <td><a href="https://www.artic.edu/open-access/public-api" target="_blank">Link</a></td>
                 <td><a href="javascript:void(0)" class="schemalink" data="artic">View</a></td>
         </tr>
         <tr>
                 <td>Gobots</td>
-                <td>Box art and images of transforming toys from the 80's.</td>
                 <td>Toys</td>
+                <td>Box art and images of transforming toys from the 80's.</td>
                 <td>
                         <a href="https://gbwiki.shoutwiki.com/wiki/Main_Page" target="_blank">Link</a><br>
                         <a href="https://www.the-liberator.net/" target="_blank">Link</a>
@@ -34,162 +57,162 @@
         </tr>
         <tr>
                 <td>Gunpla</td>
-                <td>Box art and product images of model kits.</td>
                 <td>Toys</td>
+                <td>Box art and product images of model kits.</td>
                 <td><a href="https://gunpla.fandom.com/wiki/Gunplapedia" target="_blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Giphy</td>
-                <td>Animated gifs.</td>
                 <td>Media</td>
+                <td>Animated gifs.</td>
                 <td><a href="https://developers.giphy.com/" target="_blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Gran Turismo</td>
-                <td>Realistic reference images for cars.</td>
                 <td>Games</td>
+                <td>Realistic reference images for cars.</td>
                 <td><a href="https://gran-turismo.fandom.com/wiki/Gran_Turismo_Wiki" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Louvre</td>
-                <td>Museum access.</td>
                 <td>Art</td>
+                <td>Museum access.</td>
                 <td><a href="https://collections.louvre.fr/en/page/documentationJSON" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Project Gutenberg</td>
-                <td>Old literature.</td>
                 <td>Literature</td>
+                <td>Old literature.</td>
                 <td><a href="https://www.gutenberg.org/" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Harvard Art Museums</td>
-                <td>Museum access.</td>
                 <td>Art</td>
+                <td>Museum access.</td>
                 <td><a href="https://harvardartmuseums.org/collections/api" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Hot Wheels</td>
-                <td>Fantasy/cartoon reference images for cars.</td>
                 <td>Toys</td>
+                <td>Fantasy/cartoon reference images for cars.</td>
                 <td><a href="https://hotwheels.fandom.com/wiki/Hot_Wheels" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>IGDB</td>
-                <td>Summaries, cover art, and screen-shots for historical and new video games.</td>
                 <td>Games</td>
+                <td>Summaries, cover art, and screen-shots for historical and new video games.</td>
                 <td><a href="https://api-docs.igdb.com/" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>iNaturalist</td>
-                <td>Species photography.</td>
                 <td>Science</td>
+                <td>Species photography.</td>
                 <td><a href="https://api.inaturalist.org/v1/docs/" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Marvel Database</td>
-                <td>Fan written information on the Marvel comics, movies, characters, etc.</td>
                 <td>Media</td>
+                <td>Fan written information on the Marvel comics, movies, characters, etc.</td>
                 <td><a href="https://marvel.fandom.com/wiki/Marvel_Database" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Matchbox</td>
-                <td>Reference images for civilian cars.</td>
                 <td>Toys</td>
+                <td>Reference images for civilian cars.</td>
                 <td><a href="https://matchbox.fandom.com/wiki/Matchbox_Cars_Wiki" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>MET Museum of Art</td>
-                <td>Museum access.</td>
                 <td>Art</td>
+                <td>Museum access.</td>
                 <td><a href="https://metmuseum.github.io/" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Music Theory</td>
-                <td>Visual music theory reference across 3 instruments.</td>
                 <td>Music</td>
+                <td>Visual music theory reference across 3 instruments.</td>
                 <td><a href="https://github.com/tonaljs/tonal" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Nasa</td>
-                <td>A Picture of the Day archive and decades of media from the image/video libraries.</td>
                 <td>Science</td>
+                <td>A Picture of the Day archive and decades of media from the image/video libraries.</td>
                 <td><a href="https://data.nasa.gov/" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Odin Sphere</td>
-                <td>Character art, game systems, fan written character profiles, and story bits about the game.</td>
                 <td>Games</td>
+                <td>Character art, game systems, fan written character profiles, and story bits about the game.</td>
                 <td><a href="https://odinsphere.fandom.com/wiki/Odin_Sphere_Wiki" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Phish.in'</td>
-                <td>Listen to live Phish recordings.</td>
                 <td>Music</td>
+                <td>Listen to live Phish recordings.</td>
                 <td><a href="https://phish.in/api-docs" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>PoetryDB</td>
-                <td>A collection of poems.</td>
                 <td>Literature</td>
+                <td>A collection of poems.</td>
                 <td><a href="https://poetrydb.org/index.html" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>PokéAPi</td>
-                <td>The national Pokédex.</td>
                 <td>Games</td>
+                <td>The national Pokédex.</td>
                 <td><a href="https://pokeapi.co/" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Pokémon TCG</td>
-                <td>Card data and image repository for the Pokémon trading card game.</td>
                 <td>Games</td>
+                <td>Card data and image repository for the Pokémon trading card game.</td>
                 <td><a href="https://pokemontcg.io/" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Rebrickable</td>
-                <td>Official Lego set summaries with potential images and instructions for alternate builds.</td>
                 <td>Toys</td>
+                <td>Official Lego set summaries with potential images and instructions for alternate builds.</td>
                 <td><a href="https://rebrickable.com/api/" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Scryfall</td>
-                <td>Card data and image repository for the Magic: the Gathering trading card game.</td>
                 <td>Games</td>
+                <td>Card data and image repository for the Magic: the Gathering trading card game.</td>
                 <td><a href="https://scryfall.com/docs/api" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>The Smithsonian</td>
-                <td>Museum access.</td>
                 <td>Heritage</td>
+                <td>Museum access.</td>
                 <td><a href="https://www.si.edu/openaccess/devtools" target="blank">Link</a></td>
                 <td></td>
         </tr>
         <tr>
                 <td>Te Papa</td>
-                <td>Learn about the culture of New Zealand.</td>
                 <td>Heritage</td>
+                <td>Learn about the culture of New Zealand.</td>
                 <td><a href="https://data.tepapa.govt.nz/docs/" target="blank">Link</a></td>
                 <td></td>
         </tr>
