--- a/html/collection.html
+++ b/html/collection.html
@@ -1,6 +1,6 @@
 <p>This is a list of all the current dataset implementations of the library. </p>
 
-<table class="generaltable">
+<table class="generaltable no-scale">
         <tr>
                 <td class="tdl">Name</td>
                 <td class="tdr">Name of the institution or data source.</td>
