--- a/html/collection.html
+++ b/html/collection.html
@@ -2,24 +2,24 @@
 
 <table class="generaltable no-scale">
         <tr>
-                <td class="tdl">Name</td>
-                <td class="tdr">Name of the institution or data source.</td>
+                <td class="tdr">Name</td>
+                <td class="tdl">Name of the institution or data source.</td>
         </tr>
         <tr>
-                <td class="tdl">Category</td>
-                <td class="tdr">A simple identifier for filtration of datasets.</td>
+                <td class="tdr">Category</td>
+                <td class="tdl">A simple identifier for filtration of datasets.</td>
         </tr>
         <tr>
-                <td class="tdl">Purpose</td>
-                <td class="tdr">While the categorization is more deliberate in its context, the purpose of an implementation may be more specific. For example, Hot Wheels, Gran Turismo, and Matchbox are all related to cars, with two being from the toy category and another in the games category. The purpose of all three however are primarily for access to car images. Matchbox mainly serves civilian cars, Hot Wheels serves fantasy cars, and Gran Turismo serves realistic cars. It took 3 datasets to serve the most functional case of car references since commercial car data from multiple makes is anything but unified.</td>
+                <td class="tdr">Purpose</td>
+                <td class="tdl">While the categorization is more deliberate in its context, the purpose of an implementation may be more specific. For example, Hot Wheels, Gran Turismo, and Matchbox are all related to cars, with two being from the toy category and another in the games category. The purpose of all three however are primarily for access to car images. Matchbox mainly serves civilian cars, Hot Wheels serves fantasy cars, and Gran Turismo serves realistic cars. It took 3 datasets to serve the most functional case of car references since commercial car data from multiple makes is anything but unified.</td>
         </tr>
         <tr>
-                <td class="tdl">Data Source</td>
-                <td class="tdr">Link to the data source and/or its API documentation.</td>
+                <td class="tdr">Data Source</td>
+                <td class="tdl">Link to the data source and/or its API documentation.</td>
         </tr>
         <tr>
-                <td class="tdl">Schema/Data</td>
-                <td class="tdr">The mysql database structure of the dataset or example-data.</td>
+                <td class="tdr">Schema/Data</td>
+                <td class="tdl">The mysql database structure of the dataset or example-data.</td>
         </tr>
 </table>
 
