--- a/html/collection.html
+++ b/html/collection.html
@@ -60,7 +60,7 @@
                 <td>Toys</td>
                 <td>Box art and product images of model kits.</td>
                 <td><a href="https://gunpla.fandom.com/wiki/Gunplapedia" target="_blank">Link</a></td>
-                <td></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="gunpla">View</a></td>
         </tr>
         <tr>
                 <td>Giphy</td>
@@ -88,7 +88,7 @@
                 <td>Literature</td>
                 <td>Old literature.</td>
                 <td><a href="https://www.gutenberg.org/" target="blank">Link</a></td>
-                <td></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="gutenberg">View</a></td>
         </tr>
         <tr>
                 <td>Harvard Art Museums</td>
