--- a/html/collection.html
+++ b/html/collection.html
@@ -60,7 +60,7 @@
                 <td>Toys</td>
                 <td>Box art and product images of model kits.</td>
                 <td><a href="https://gunpla.fandom.com/wiki/Gunplapedia" target="_blank">Link</a></td>
-                <td><a href="javascript:void(0)" class="schemalink" data="gunpla">View</a></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="mediawiki">View</a></td>
         </tr>
         <tr>
                 <td>Giphy</td>
@@ -102,7 +102,7 @@
                 <td>Toys</td>
                 <td>Fantasy/cartoon reference images for cars.</td>
                 <td><a href="https://hotwheels.fandom.com/wiki/Hot_Wheels" target="blank">Link</a></td>
-                <td></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="mediawiki">View</a></td>
         </tr>
         <tr>
                 <td>IGDB</td>
@@ -123,14 +123,14 @@
                 <td>Media</td>
                 <td>Fan written information on the Marvel comics, movies, characters, etc.</td>
                 <td><a href="https://marvel.fandom.com/wiki/Marvel_Database" target="blank">Link</a></td>
-                <td></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="mediawiki">View</a></td>
         </tr>
         <tr>
                 <td>Matchbox</td>
                 <td>Toys</td>
                 <td>Reference images for civilian cars.</td>
                 <td><a href="https://matchbox.fandom.com/wiki/Matchbox_Cars_Wiki" target="blank">Link</a></td>
-                <td></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="mediawiki">View</a></td>
         </tr>
         <tr>
                 <td>MET Museum of Art</td>
@@ -158,7 +158,7 @@
                 <td>Games</td>
                 <td>Character art, game systems, fan written character profiles, and story bits about the game.</td>
                 <td><a href="https://odinsphere.fandom.com/wiki/Odin_Sphere_Wiki" target="blank">Link</a></td>
-                <td></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="mediawiki">View</a></td>
         </tr>
         <tr>
                 <td>Phish.in'</td>
