--- a/html/collection.html
+++ b/html/collection.html
@@ -36,14 +36,14 @@
                 <td>Media</td>
                 <td>Summaries for historical as well as new anime and manga.</td>
                 <td><a href="https://docs.anilist.co/" target="_blank">Link</a></td>
-                <td><a href="javascript:void(0)" class="schemalink" data="anilist">View</a></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="anilist">MySQL</a></td>
         </tr>
         <tr>
                 <td>Art Institute of Chicago</td>
                 <td>Art</td>
                 <td>Museum access.</td>
                 <td><a href="https://www.artic.edu/open-access/public-api" target="_blank">Link</a></td>
-                <td><a href="javascript:void(0)" class="schemalink" data="artic">View</a></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="artic">MySQL</a></td>
         </tr>
         <tr>
                 <td>Gobots</td>
@@ -51,7 +51,7 @@
                 <td>Box art and images of transforming toys from the 80's.</td>
                 <td>
                         <a href="https://gbwiki.shoutwiki.com/wiki/Main_Page" target="_blank">Link</a><br>
-                        <a href="https://www.the-liberator.net/" target="_blank">Link</a>
+                        <a href="https://www.the-liberator.net/" target="_blank">JSON</a>
                 </td>
                 <td></td>
         </tr>
@@ -60,14 +60,14 @@
                 <td>Toys</td>
                 <td>Box art and product images of model kits.</td>
                 <td><a href="https://gunpla.fandom.com/wiki/Gunplapedia" target="_blank">Link</a></td>
-                <td><a href="javascript:void(0)" class="schemalink" data="mediawiki">View</a></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="mediawiki">Mediawiki</a></td>
         </tr>
         <tr>
                 <td>Giphy</td>
                 <td>Media</td>
                 <td>Animated gifs.</td>
                 <td><a href="https://developers.giphy.com/" target="_blank">Link</a></td>
-                <td></td>
+                <td><a href="javascript:void(0)">Live API Call</a></td>
         </tr>
         <tr>
                 <td>Gran Turismo</td>
@@ -88,7 +88,7 @@
                 <td>Literature</td>
                 <td>Old literature.</td>
                 <td><a href="https://www.gutenberg.org/" target="blank">Link</a></td>
-                <td><a href="javascript:void(0)" class="schemalink" data="gutenberg">View</a></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="gutenberg">MySQL</a></td>
         </tr>
         <tr>
                 <td>Harvard Art Museums</td>
@@ -102,7 +102,7 @@
                 <td>Toys</td>
                 <td>Fantasy/cartoon reference images for cars.</td>
                 <td><a href="https://hotwheels.fandom.com/wiki/Hot_Wheels" target="blank">Link</a></td>
-                <td><a href="javascript:void(0)" class="schemalink" data="mediawiki">View</a></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="mediawiki">Mediawiki</a></td>
         </tr>
         <tr>
                 <td>IGDB</td>
@@ -116,21 +116,21 @@
                 <td>Science</td>
                 <td>Species photography.</td>
                 <td><a href="https://api.inaturalist.org/v1/docs/" target="blank">Link</a></td>
-                <td></td>
+                <td><a href="javascript:void(0)">Live API Call</a></td>
         </tr>
         <tr>
                 <td>Marvel Database</td>
                 <td>Media</td>
                 <td>Fan written information on the Marvel comics, movies, characters, etc.</td>
                 <td><a href="https://marvel.fandom.com/wiki/Marvel_Database" target="blank">Link</a></td>
-                <td><a href="javascript:void(0)" class="schemalink" data="mediawiki">View</a></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="mediawiki">Mediawiki</a></td>
         </tr>
         <tr>
                 <td>Matchbox</td>
                 <td>Toys</td>
                 <td>Reference images for civilian cars.</td>
                 <td><a href="https://matchbox.fandom.com/wiki/Matchbox_Cars_Wiki" target="blank">Link</a></td>
-                <td><a href="javascript:void(0)" class="schemalink" data="mediawiki">View</a></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="mediawiki">Mediawiki</a></td>
         </tr>
         <tr>
                 <td>MET Museum of Art</td>
@@ -158,7 +158,7 @@
                 <td>Games</td>
                 <td>Character art, game systems, fan written character profiles, and story bits about the game.</td>
                 <td><a href="https://odinsphere.fandom.com/wiki/Odin_Sphere_Wiki" target="blank">Link</a></td>
-                <td><a href="javascript:void(0)" class="schemalink" data="mediawiki">View</a></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="mediawiki">Mediawiki</a></td>
         </tr>
         <tr>
                 <td>Phish.in'</td>
