--- a/html/collection.html
+++ b/html/collection.html
@@ -51,7 +51,7 @@
                 <td>Box art and images of transforming toys from the 80's.</td>
                 <td>
                         <a href="https://gbwiki.shoutwiki.com/wiki/Main_Page" target="_blank">Link</a><br>
-                        <a href="https://www.the-liberator.net/" target="_blank">JSON</a>
+                        <a href="https://www.the-liberator.net/" target="_blank">Link</a>
                 </td>
                 <td></td>
         </tr>
@@ -67,7 +67,7 @@
                 <td>Media</td>
                 <td>Animated gifs.</td>
                 <td><a href="https://developers.giphy.com/" target="_blank">Link</a></td>
-                <td><a href="javascript:void(0)">Live API Call</a></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="giphy">Live API Call</a></td>
         </tr>
         <tr>
                 <td>Gran Turismo</td>
