--- a/html/schemas/giphy.html
+++ b/html/schemas/giphy.html
@@ -1,3 +1,6 @@
+<div style="margin-bottom:24px;">
+        Giphy is one of the few implementations where the dataset is not mirrored and a direct call to the API is made to retrieve the data.
+</div>
 <pre>
 {
     "type": "gif",
