--- a/html/collection.html
+++ b/html/collection.html
@@ -116,7 +116,7 @@
                 <td>Science</td>
                 <td>Species photography.</td>
                 <td><a href="https://api.inaturalist.org/v1/docs/" target="blank">Link</a></td>
-                <td><a href="javascript:void(0)">Live API Call</a></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="inaturalist">Live API Call</a></td>
         </tr>
         <tr>
                 <td>Marvel Database</td>
