--- a/html/collection.html
+++ b/html/collection.html
@@ -53,7 +53,7 @@
                         <a href="https://gbwiki.shoutwiki.com/wiki/Main_Page" target="_blank">Link</a><br>
                         <a href="https://www.the-liberator.net/" target="_blank">Link</a>
                 </td>
-                <td></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="gobots">JSON</a></td>
         </tr>
         <tr>
                 <td>Gunpla</td>
