--- a/html/schemas/gobots.html
+++ b/html/schemas/gobots.html
@@ -1,3 +1,4 @@
+<div class="toggleButton returnlink" style="margin-bottom:8px;">Return to Collection</div>
 <div style="margin-bottom:24px">Gobots does not have a database. It contains all its data in a JSON file which is loaded asynchronously while javascript is initializing.</div>
 <pre>
 {
