--- a/html/schemas/inaturalist.html
+++ b/html/schemas/inaturalist.html
@@ -1,3 +1,4 @@
+<div class="toggleButton returnlink" style="margin-bottom:8px;">Return to Collection</div>
 <div style="margin-bottom:24px;">
         iNaturalist is one of the few implementations where the dataset is not mirrored and a direct call to the API is made to retrieve the data.
 </div>
