--- a/html/schemas/artic.html
+++ b/html/schemas/artic.html
@@ -1,4 +1,4 @@
-<div><div class="toggleButton returnlink" style="margin-bottom:8px;">Return to Collection</div></div>
+<div class="flexrowplain"><div class="toggleButton returnlink" style="margin-bottom:8px;">Return to Collection</div></div>
 <table class="generaltable no-scale">
     <thead>
         <tr>
