--- a/html/schemas/mediawiki.html
+++ b/html/schemas/mediawiki.html
@@ -1,4 +1,4 @@
-<div><div class="toggleButton returnlink" style="margin-bottom:8px;">Return to Collection</div></div>
+<div class="flexrowplain"><div class="toggleButton returnlink" style="margin-bottom:8px;">Return to Collection</div></div>
 
 <div class="m24">This dataset uses Mediawiki data structure.</div>
 
