--- a/html/collection.html
+++ b/html/collection.html
@@ -74,14 +74,14 @@
                 <td>Games</td>
                 <td>Realistic reference images for cars.</td>
                 <td><a href="https://gran-turismo.fandom.com/wiki/Gran_Turismo_Wiki" target="blank">Link</a></td>
-                <td></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="mediawiki">Mediawiki</a></td>
         </tr>
         <tr>
                 <td>Louvre</td>
                 <td>Art</td>
                 <td>Museum access.</td>
                 <td><a href="https://collections.louvre.fr/en/page/documentationJSON" target="blank">Link</a></td>
-                <td></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="louvre">MySQL</a></td>
         </tr>
         <tr>
                 <td>Project Gutenberg</td>
@@ -95,7 +95,7 @@
                 <td>Art</td>
                 <td>Museum access.</td>
                 <td><a href="https://harvardartmuseums.org/collections/api" target="blank">Link</a></td>
-                <td></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="harvardartmuseums">MySQL</a></td>
         </tr>
         <tr>
                 <td>Hot Wheels</td>
@@ -109,7 +109,7 @@
                 <td>Games</td>
                 <td>Summaries, cover art, and screen-shots for historical and new video games.</td>
                 <td><a href="https://api-docs.igdb.com/" target="blank">Link</a></td>
-                <td></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="igdb">MySQL</a></td>
         </tr>
         <tr>
                 <td>iNaturalist</td>
@@ -137,21 +137,21 @@
                 <td>Art</td>
                 <td>Museum access.</td>
                 <td><a href="https://metmuseum.github.io/" target="blank">Link</a></td>
-                <td></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="met">MySQL</a></td>
         </tr>
         <tr>
                 <td>Music Theory</td>
                 <td>Music</td>
                 <td>Visual music theory reference across 3 instruments.</td>
                 <td><a href="https://github.com/tonaljs/tonal" target="blank">Link</a></td>
-                <td></td>
+                <td>...</td>
         </tr>
         <tr>
                 <td>Nasa</td>
                 <td>Science</td>
                 <td>A Picture of the Day archive and decades of media from the image/video libraries.</td>
                 <td><a href="https://data.nasa.gov/" target="blank">Link</a></td>
-                <td></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="nasa">MySQL</a></td>
         </tr>
         <tr>
                 <td>Odin Sphere</td>
@@ -165,56 +165,56 @@
                 <td>Music</td>
                 <td>Listen to live Phish recordings.</td>
                 <td><a href="https://phish.in/api-docs" target="blank">Link</a></td>
-                <td></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="phishin">MySQL</a></td>
         </tr>
         <tr>
                 <td>PoetryDB</td>
                 <td>Literature</td>
                 <td>A collection of poems.</td>
                 <td><a href="https://poetrydb.org/index.html" target="blank">Link</a></td>
-                <td></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="poetrydb">MySQL</a></td>
         </tr>
         <tr>
                 <td>PokéAPi</td>
                 <td>Games</td>
                 <td>The national Pokédex.</td>
                 <td><a href="https://pokeapi.co/" target="blank">Link</a></td>
-                <td></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="pokeapi">MySQL</a></td>
         </tr>
         <tr>
                 <td>Pokémon TCG</td>
                 <td>Games</td>
                 <td>Card data and image repository for the Pokémon trading card game.</td>
                 <td><a href="https://pokemontcg.io/" target="blank">Link</a></td>
-                <td></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="pokemontcg">MySQL</a></td>
         </tr>
         <tr>
                 <td>Rebrickable</td>
                 <td>Toys</td>
                 <td>Official Lego set summaries with potential images and instructions for alternate builds.</td>
                 <td><a href="https://rebrickable.com/api/" target="blank">Link</a></td>
-                <td></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="rebrickable">MySQL</a></td>
         </tr>
         <tr>
                 <td>Scryfall</td>
                 <td>Games</td>
                 <td>Card data and image repository for the Magic: the Gathering trading card game.</td>
                 <td><a href="https://scryfall.com/docs/api" target="blank">Link</a></td>
-                <td></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="scryfall">MySQL</a></td>
         </tr>
         <tr>
                 <td>The Smithsonian</td>
                 <td>Heritage</td>
                 <td>Museum access.</td>
                 <td><a href="https://www.si.edu/openaccess/devtools" target="blank">Link</a></td>
-                <td></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="smithsonian">MySQL</a></td>
         </tr>
         <tr>
                 <td>Te Papa</td>
                 <td>Heritage</td>
                 <td>Learn about the culture of New Zealand.</td>
                 <td><a href="https://data.tepapa.govt.nz/docs/" target="blank">Link</a></td>
-                <td></td>
+                <td><a href="javascript:void(0)" class="schemalink" data="tepapa">MySQL</a></td>
         </tr>
 </table>
 
