--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="tocbox flexcolumn">
                         <div class="orbitron">Overview</div>
                         <div class="flexcolumn" style="margin:8px;">
-                                <a href="javascript:void(0)" class="nounderline" data="briefing">Summary</a>
+                                <a href="javascript:void(0)" class="nounderline" data="summary">Summary</a>
                                 <a href="javascript:void(0)" class="nounderline" data="collection">Collection</a>
                         </div>
 
