--- a/html/summary.html
+++ b/html/summary.html
@@ -31,3 +31,10 @@
 <div class="m24 flexcolumn"> 
         Page layouts for query results do their best to present as much information at once as possible. Commonly in other sites, you would have thumbnails which are linked to full page views. The library however, when applicable, has the thumbnail coupled with its complete meta-data laid out in the query results, which makes the data for all returned records displayed immediately. This significantly cuts down on excess user navigation.
 </div>
+
+<div class="orbitron">
+        Record Curation
+</div>
+<div class="m24 flexcolumn"> 
+        Real world data is messy, and even data from prestigious institutions such as Smithsonian and MET are littered with media-poor records. The library's queries are tuned to prune away any media-poor records. This ensures that users get what they came for. In some cases, copyright restrictions will limit the quality of a record in one way or another such as reducing an audio clip to but a few seconds or disabling the display of an image, and those are also under consideration for query omission.
+</div>
