--- a/html/collection.html
+++ b/html/collection.html
@@ -11,7 +11,7 @@
         </tr>
         <tr>
                 <td class="tdr">Purpose</td>
-                <td class="tdl">While the categorization is more deliberate in its context, the purpose of an implementation may be more specific. For example, Hot Wheels, Gran Turismo, and Matchbox are all related to cars, with two being from the toy category and another in the games category. The purpose of all three however are primarily for access to car images. Matchbox mainly serves civilian cars, Hot Wheels serves fantasy cars, and Gran Turismo serves realistic cars. It took 3 datasets to serve the most functional case of car references since commercial car data from multiple makes is anything but unified.</td>
+                <td class="tdl">While some are straight forward, the purpose of some implementations may be quite specific. For example, Hot Wheels, Gran Turismo, and Matchbox are all related to cars, with two being from the toy category and another in the games category. The purpose of all three however are primarily for access to car images. Matchbox mainly serves civilian cars, Hot Wheels serves fantasy cars, and Gran Turismo serves realistically rendered cars. It took 3 datasets to serve the most functional case of car referencing since commercial car data from multiple makes is anything but unified.</td>
         </tr>
         <tr>
                 <td class="tdr">Data Source</td>
