--- a/html/summary.html
+++ b/html/summary.html
@@ -1,6 +1,6 @@
 <div class="orbitron">About the Library.</div>
 <div class="m24">
-        The Internet Public Library is a free, web-based research and reference platform that consolidates structured information from a wide range of external sources which include public APIs, cultural institutions, and community-maintained wikis. The system ingests heterogeneous data, reorganizes it, and renders it through a single page application. 
+        The Internet Public Library is a free, web-based research and reference platform that consolidates structured information from a wide range of external sources which include public APIs, cultural institutions, and community-maintained wikis. The system ingests heterogeneous data, reorganizes it, and renders it through a single page application; grouping the world’s scattered information into a cozy environment for observation.
         <ul>
                 <li>For artists, it provides high-quality visual references.</li>
 
@@ -8,15 +8,15 @@
 
                 <li>For general use, it enables exploration of curated datasets across media, culture, and science.</li>
         </ul>
-        With the library's structured data, its use serves to reduce the amount of chaos in reference seeking by adding on opportunities for learning more about what is being looked at through said data. This makes browsing the library more meaningful when used in place of a platform such as Pinterest, although its job is not to replace them since every place has something that another does not. On the other hand, with the library in existence, it increases the chances of users having context for visual studies. References are stressed in the world of illustration, but rarely the context of the references. Even under general use, anyone can benefit from object context.
+        With the library's structured data, its use serves to reduce the amount of chaos in reference seeking by adding opportunities for learning more about what is being looked at through said data. This makes browsing the library more meaningful when used in place of a platform such as Pinterest, although its job is not to replace them since every place has something that another does not. On the other hand, with the library in existence, it increases the chances of users having context to go along with visual studies. Object context may be of benefit even under general use.
 </div>
 
-<div class="orbitron">Subject Matter</div>
+<div class="orbitron">Considered Dataset Implementations</div>
 
 <div class="m24"> 
-        <p>Datasets integrated into the library are limited only by their <strong>data-quality</strong><span style="color:rgb(72, 255, 0);">*</span> and data-use restrictions. Subject matter of any kind is otherwise welcome. At the time of writing, there are over 20 fully implemented datasets running across the domains of art, games, literature, media, music, science, and toys. New sources are continually evaluated and incorporated during development. Some datasets are exceptionally large, spanning millions of records collected over decades such as those from the Smithsonian or NASA. The library presents records in a way which surfaces the world’s buried information and increases access to it.</p> 
+        <p>Datasets which fall under consideration for integration into the library are those where data-quality<span style="color:rgb(72, 255, 0);">*</span> is adequate and data-use restrictions are lenient. Subject matter of any kind is otherwise welcome. The 2 dozen currently implemented datasets run across the domains of art, games, literature, media, music, science, and toys. New sources are continually evaluated and implemented during development. Some datasets are exceptionally large, spanning millions of records collected over decades such as those from the Smithsonian or NASA. </p>
         
-        <p class="mb"><span style="color:rgb(72, 255, 0);">*</span> High-quality data is media-rich, complete or sufficiently complete in its metadata, and consistent in its structure.</p> 
+        <p class="mb"><span style="color:rgb(72, 255, 0);">*</span> Quality data is media-rich, complete or sufficiently complete in its metadata, and consistent in its structure.</p> 
 </div>
 
 <div class="orbitron">Layout Considerations</div> 
