--- a/html/summary.html
+++ b/html/summary.html
@@ -1,20 +1,12 @@
 <div class="orbitron">About the Library.</div>
 <div class="m24">
-        The Internet Public Library is a free, web-based research and reference platform that consolidates structured information from a wide range of external sources which include public APIs, cultural institutions, and community-maintained wikis. The system ingests heterogeneous data, reorganizes it, and renders it through a single page application; grouping the world’s scattered information into a cozy environment for observation.
-        <ul>
-                <li>For artists, it provides high-quality visual references.</li>
-
-                <li>For musicians, it offers playback utilities and theory tools.</li>
-
-                <li>For general use, it enables exploration of curated datasets across media, culture, and science.</li>
-        </ul>
-        With the library's structured data, its use serves to reduce the amount of chaos in reference seeking by adding opportunities for learning more about what is being looked at through said data. This makes browsing the library more meaningful when used in place of a platform such as Pinterest, although its job is not to replace them since every place has something that another does not. On the other hand, with the library in existence, it increases the chances of users having context to go along with visual studies. Object context may be of benefit even under general use.
+        The Internet Public Library is a free, web-based research and reference platform that consolidates structured information from a wide range of external sources which include public APIs, cultural institutions, and community-maintained wikis. The system ingests heterogeneous data, reorganizes it, and renders it through a single page application; grouping the world’s scattered information into a cozy environment for observation. Information can be used for visual references while also learning from the meta-data, providing context and sources to objects and stories. For the musicly inclined, there is a music application with theory tools.
 </div>
 
 <div class="orbitron">Considered Dataset Implementations</div>
 
 <div class="m24"> 
-        <p>Datasets which fall under consideration for integration into the library are those where data-quality<span style="color:rgb(72, 255, 0);">*</span> is adequate and data-use restrictions are lenient. Subject matter of any kind is otherwise welcome. The 2 dozen currently implemented datasets run across the domains of art, games, literature, media, music, science, and toys. New sources are continually evaluated and implemented during development. Some datasets are exceptionally large, spanning millions of records collected over decades such as those from the Smithsonian or NASA. </p>
+        <p>Datasets which fall under consideration for integration into the library are those where data-quality<span style="color:rgb(72, 255, 0);">*</span> is adequate and data-use restrictions are lenient. Subject matter of any kind is otherwise welcome. The 2 dozen currently implemented datasets run across the domains of art, games, literature, media, music, science, and toys. New sources are evaluated and implemented during development. Some datasets are large, spanning millions of records collected over decades such as data from the Smithsonian or NASA. </p>
         
         <p class="mb"><span style="color:rgb(72, 255, 0);">*</span> Quality data is media-rich, complete or sufficiently complete in its metadata, and consistent in its structure.</p> 
 </div>
