--- a/html/summary.html
+++ b/html/summary.html
@@ -1,6 +1,6 @@
 <div class="orbitron">About the Library.</div>
 <div class="m24">
-        The Internet Public Library is a free, web-based research and reference platform that consolidates structured information from a wide range of external sources which include public APIs, cultural institutions, and community-maintained wikis. The system ingests heterogeneous data, reorganizes it, and renders it through a single page application; grouping the world’s scattered information into a cozy environment for observation. Information can be used for visual references while also learning from the meta-data, providing context and sources to objects and stories. For the musicly inclined, there is a music application with theory tools.
+        The Internet Public Library is a free, web-based research and reference environnment which displays information from rich datasets. These datasets come from a range of sources including public APIs, cultural institutions, and community-maintained wikis. The system ingests heterogeneous data, reorganizes it, and renders it through a single page application. Artists who are looking for visual references can also learn from the meta-data, which provides context and sources to objects and stories. While most implementations are presentations of datasets, there are some unique implementations such as the music theory reference application. The library is meant to serve what is needed or felt; reference material, learning, or reminiscing about a certain era of anything.
 </div>
 
 <div class="orbitron">Considered Dataset Implementations</div>
