--- a/html/summary.html
+++ b/html/summary.html
@@ -2,6 +2,7 @@
 <div class="m24">
        <p> The Internet Public Library is a free, web-based research and reference environnment which displays information from web libraries and datasets. It is open to anyone who wants to look, can be used for discovery, learning, or reminiscing about a certain era of something. Artists who are looking for visual references can also learn from the meta-data, which provides context and sources to objects and stories. These datasets come from a range of sources including public APIs, cultural institutions, and community-maintained wikis. The system ingests heterogeneous data, organizes it, and renders it through a single page application. </p>
        <p>With large amounts of contextual data bundled together and presented through familiar UI between every implementation, the experience is transformative. It creates a peculiar kind of convenience that is unique from sites like Pinterest and Tumblr where media is only partially contextual or referenced. </p>
+       <p>Any datasets where mirroring is feasible and allowed, these become preservational efforts, making the library a place of stewardship for digital media.</p>
 </div>
 
 <div class="orbitron">Considered Dataset Implementations</div>
